--- a/DestinyCasts/app/src/main/res/values/strings.xml
+++ b/DestinyCasts/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="choose_continue">Continue</string>
 
     <!--content provider-->
-    <string name="content_authority">me.noahpatterson.destinycasts</string>
+    <string name="content_authority">me.noahpatterson.destinycasts.app</string>
 </resources>
