Add episode detail activity view
WIP
Make descriptions scolling
Wire in player

--- a/DestinyCasts/app/src/main/res/values/strings.xml
+++ b/DestinyCasts/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <!--content provider-->
     <string name="content_authority">me.noahpatterson.destinycasts.app</string>
+    <string name="title_activity_episode">EpisodeActivity</string>
+    <string name="crucible_radio_logo">Crucible radio logo</string>
 </resources>
