Play episode WIP totalTrackTime

--- a/DestinyCasts/app/src/main/res/values/strings.xml
+++ b/DestinyCasts/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_activity_episode">EpisodeActivity</string>
     <string name="crucible_radio_logo">Crucible radio logo</string>
     <string name="play_episode">play episode</string>
+    <string name="trackStartTime">00:00</string>
 </resources>
