--- a/DestinyCasts/app/src/main/res/values/strings.xml
+++ b/DestinyCasts/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="crucible_radio_logo">Crucible radio logo</string>
     <string name="play_episode">play episode</string>
     <string name="trackStartTime">00:00</string>
+    <string name="episode_image">episode image</string>
 </resources>
