--- a/DestinyCasts/app/src/main/res/values/strings.xml
+++ b/DestinyCasts/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="play_episode">play episode</string>
     <string name="trackStartTime">00:00</string>
     <string name="episode_image">episode image</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="no_episode_for_widget">No Episode Playing. Click to select an episode.</string>
 </resources>
