--- a/DestinyCasts/app/src/main/res/values/strings.xml
+++ b/DestinyCasts/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
         For more information, see https://support.google.com/admob/answer/3052638
     <!- -->
     <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="content_desc_logo">" logo"</string>
 </resources>
