--- a/DestinyCasts/app/src/main/res/values/strings.xml
+++ b/DestinyCasts/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <!- -->
     <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="content_desc_logo">" logo"</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
