prep for final installRelease

--- a/DestinyCasts/app/src/main/res/values/strings.xml
+++ b/DestinyCasts/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <!--content provider-->
     <string name="content_authority">me.noahpatterson.destinycasts.app</string>
-    <string name="title_activity_episode">EpisodeActivity</string>
+    <string name="title_activity_episode">Episodes</string>
     <string name="crucible_radio_logo">Crucible radio logo</string>
     <string name="play_episode">play episode</string>
     <string name="trackStartTime">00:00</string>
